unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/Staging_Oracle_Show_Booth_Contact__c.object-meta.xml
<CustomObject>
    <description>Staging Table for Show Occurrence Booth Contacts from Oracle</description>
    <label>CORE Contact</label>
    <nameField>
        <label>Record Name CUST_CONT_ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CORE Contacts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>