unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/fields/AREA_CODE__c.field-meta.xml
<CustomField>
    <fullName>AREA_CODE__c</fullName>
    <description>Stores values from Oracle Show Occurrence Booth Contact XGES_SW_CUST_CONT.AREA_CODE column.</description>
    <label>Area Code</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>