unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/fields/BOOTH_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>BOOTH_NUMBER__c</fullName>
    <label>Booth #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>