unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/fields/CONTACT_ROLE__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_ROLE__c</fullName>
    <description>Stores values from Oracle Show Occurrence Booth Contact XGES_SW_CUST_CONT.CONTACT_ROLE column.</description>
    <label>Contact Role</label>
    <length>30</length>
    <type>Text</type>
</CustomField>