unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/fields/CONTACT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_TYPE__c</fullName>
    <description>Stores values from Oracle Show Occurrence Booth Contact XGES_SW_CUST_CONT.CONTACT_TYPE column.</description>
    <label>Contact Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>