unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/fields/COUNTRY_CODE__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY_CODE__c</fullName>
    <description>Stores values from Oracle Show Occurrence Booth Contact XGES_SW_CUST_CONT.COUNTRY_CODE column.</description>
    <label>Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>