unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/fields/CREATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>CREATION_DATE__c</fullName>
    <description>Stores values from Oracle Show Occurrence Booth Contact XGES_SW_CUST_CONT.CREATION_DATE column.</description>
    <label>Created</label>
    <type>DateTime</type>
</CustomField>