unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/fields/CUST_BTH_ID__c.field-meta.xml
<CustomField>
    <fullName>CUST_BTH_ID__c</fullName>
    <description>Stores values from Oracle Show Occurrence Booth Contact XGES_SW_CUST_CONT.CUST_BTH_ID column.</description>
    <label>Customer Booth ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>