unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/fields/CUSTOMER_NAME__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_NAME__c</fullName>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>