unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/fields/EMAIL_ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_ADDRESS__c</fullName>
    <description>Stores values from Oracle Show Occurrence Booth Contact XGES_SW_CUST_CONT.EMAIL_ADDRESS column.</description>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>