unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/fields/EXTENSION__c.field-meta.xml
<CustomField>
    <fullName>EXTENSION__c</fullName>
    <description>Stores values from Oracle Show Occurrence Booth Contact XGES_SW_CUST_CONT.EXTENSION column.</description>
    <label>Extension</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>