unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/fields/FAX__c.field-meta.xml
<CustomField>
    <fullName>FAX__c</fullName>
    <description>Stores values from Oracle Show Occurrence Booth Contact XGES_SW_CUST_CONT.FAX column.</description>
    <label>Fax</label>
    <length>50</length>
    <type>Text</type>
</CustomField>