unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/fields/FIRST_NAME__c.field-meta.xml
<CustomField>
    <fullName>FIRST_NAME__c</fullName>
    <description>Stores values from Oracle Show Occurrence Booth Contact XGES_SW_CUST_CONT.FIRST_NAME column.</description>
    <label>First Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>