unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/fields/Interface_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Interface_Error_Message__c</fullName>
    <label>Interface Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>