unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/fields/Interface_Status__c.field-meta.xml
<CustomField>
    <fullName>Interface_Status__c</fullName>
    <defaultValue>&#39;New&#39;</defaultValue>
    <label>Interface Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>