unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/fields/LAST_NAME__c.field-meta.xml
<CustomField>
    <fullName>LAST_NAME__c</fullName>
    <description>Stores values from Oracle Show Occurrence Booth Contact XGES_SW_CUST_CONT.LAST_NAME column.</description>
    <label>Last Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>