unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/fields/LAST_UPDATE_DATE__c.field-meta.xml
<CustomField>
    <fullName>LAST_UPDATE_DATE__c</fullName>
    <description>Stores values from Oracle Show Occurrence Booth Contact XGES_SW_CUST_CONT.LAST_UPDATE_DATE column.</description>
    <label>Last Modified</label>
    <type>DateTime</type>
</CustomField>