unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/fields/PHONE__c.field-meta.xml
<CustomField>
    <fullName>PHONE__c</fullName>
    <description>Stores values from Oracle Show Occurrence Booth Contact XGES_SW_CUST_CONT.PHONE column.</description>
    <label>Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>