unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/fields/PRIMARY_FLAG__c.field-meta.xml
<CustomField>
    <fullName>PRIMARY_FLAG__c</fullName>
    <description>Stores values from Oracle Show Occurrence Booth Contact XGES_SW_CUST_CONT.PRIMARY_FLAG column.</description>
    <label>Primary Contact</label>
    <length>1</length>
    <type>Text</type>
</CustomField>