unpackaged/main/default/objects/Staging_Oracle_Show_Booth_Contact__c/fields/SHOW_ID__c.field-meta.xml
<CustomField>
    <fullName>SHOW_ID__c</fullName>
    <label>Show ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>